@startuml

title __BACKGROUND's Class Diagram__\n

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.BoundService {
          ~ message : String
          ~ title : String
          {static} - CHANNEL_1_ID : String
          {static} - LOG_TAG : String
          - mBinder : IBinder
          + BoundService()
          + createNotification()
          + getTimestamp()
          + onBind()
          + onCreate()
          + onDestroy()
          + onRebind()
          + onTaskRemoved()
          + onUnbind()
          + sendChannel1()
          + setmContext()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.BoundService.MyBinder {
          + getService()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.DeleteSectionWorker {
          + DeleteSectionWorker()
          + doWork()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.Task.model.DeleteTaskWorker {
          + DeleteTaskWorker()
          + doWork()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.FCMSection {
          - TAG : String
          + onMessageReceived()
          + onNewToken()
          - addSectionSQL()
          - addTaskSQL()
          - deleteSectionSQL()
          - deleteTaskSQL()
          - sendRegistrationToServer()
          - updateTask()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.FocusWorker {
          - mDatabase : DatabaseReference
          - result : Task<Void>
          + FocusWorker()
          + doWork()
          - deleteToFirebase()
          - deserializeFromJson()
          - writeToFirebase()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.GetTaskSectionWorker {
          {static} - TAG : String
          + GetTaskSectionWorker()
          + doWork()
          - listenOneTime()
          - startListenSection()
          - startListenTask()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.HabitGroupWorker {
          {static} - TAG : String
          - mDatabase : DatabaseReference
          + HabitGroupWorker()
          + doWork()
          - deserializeFromJson()
          - writeToFirebase()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.background.HabitWorker {
          {static} - TAG : String
          - mDatabase : DatabaseReference
          + HabitWorker()
          + doWork()
          - deleteToFirebase()
          - deserializeFromJson()
          - writeToFirebase()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.Register.models.RegisterFirebaseUser {
          - mActivity : Activity
          - mEmail : String
          - mPassword : String
          + RegisterFirebaseUser()
          # doInBackground()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.Register.models.UploadDataWorker {
          + UploadDataWorker()
          + doWork()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.Home.Home.models.UploadSectionWorker {
          + UploadSectionWorker()
          + doWork()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace background {
      class com.mad.p03.np2020.routine.Task.model.UploadTaskWorker {
          + UploadTaskWorker()
          + doWork()
      }
    }
  }
  

  com.mad.p03.np2020.routine.background.BoundService -up-|> android.app.Service
  com.mad.p03.np2020.routine.background.BoundService o-- com.mad.p03.np2020.routine.FocusActivity : mContext
  com.mad.p03.np2020.routine.background.BoundService +-down- com.mad.p03.np2020.routine.background.BoundService.MyBinder
  com.mad.p03.np2020.routine.background.BoundService.MyBinder -up-|> android.os.Binder
  com.mad.p03.np2020.routine.background.DeleteSectionWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.Task.model.DeleteTaskWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.background.FCMSection -up-|> com.google.firebase.messaging.FirebaseMessagingService
  com.mad.p03.np2020.routine.background.FocusWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.background.FocusWorker o-- com.mad.p03.np2020.routine.Class.Focus : focusData
  com.mad.p03.np2020.routine.background.GetTaskSectionWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.background.GetTaskSectionWorker o-- com.mad.p03.np2020.routine.database.SectionDBHelper : mSectionDBHelper
  com.mad.p03.np2020.routine.background.GetTaskSectionWorker o-- com.mad.p03.np2020.routine.database.TaskDBHelper : mTaskDBHelper
  com.mad.p03.np2020.routine.background.HabitGroupWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.background.HabitGroupWorker o-- com.mad.p03.np2020.routine.Class.HabitGroup : habitGroupData
  com.mad.p03.np2020.routine.background.HabitWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.background.HabitWorker o-- com.mad.p03.np2020.routine.Class.Habit : habitData
  com.mad.p03.np2020.routine.Register.models.RegisterFirebaseUser -up-|> android.os.AsyncTask
  com.mad.p03.np2020.routine.Register.models.RegisterFirebaseUser o-- com.mad.p03.np2020.routine.Register.models.OnFirebaseAuth : mOnFirebaseAuth
  com.mad.p03.np2020.routine.Register.models.UploadDataWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.Home.Home.models.UploadSectionWorker -up-|> androidx.work.Worker
  com.mad.p03.np2020.routine.Task.model.UploadTaskWorker -up-|> androidx.work.Worker


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
